--- a/css/main.css
+++ b/css/main.css
@@ -2,24 +2,24 @@
   min-height: 100vh;
 }
 body {
-  background: #b09e99;
+  background: #FFCA3A;
 }
 .quote-container {
-  background: rgba(255, 255, 255, 0.5);
+  background: rgba(233, 241, 247);
 }
 #generate-btn {
   color: white !important;
-  background: #64b6ac !important;
+  background: #FF595E !important;
   border-color: #64b6ac !important;
   cursor: pointer;
   font-size: 1.5rem;
   padding: 0.5rem 1rem;
 }
 #generate-btn:hover {
-  background: #b09e99 !important;
+  background: #8783d1 !important;
   border-color: #b09e99 !important;
   color: #333333 !important;
 }
 .author {
-  color: #64b6ac;
+  color: #02182b;
 }
